[gd_scene load_steps=6 format=3 uid="uid://bnvrpqgoxo41k"]

[ext_resource type="Script" path="res://scenes/levels/gui_controller.gd" id="1_2uar2"]
[ext_resource type="PackedScene" uid="uid://b1p0urj2r281" path="res://ui/inventory.tscn" id="2_j4a2o"]
[ext_resource type="PackedScene" uid="uid://j7jubt6fbsdc" path="res://ability_pod.tscn" id="2_rakiw"]
[ext_resource type="Texture2D" uid="uid://bxcgkesvohklb" path="res://assets/abilities/researcher/Z.PNG" id="3_johxo"]
[ext_resource type="Texture2D" uid="uid://c4no3voq57286" path="res://assets/abilities/researcher/X.png" id="4_fiupw"]

[node name="MainGUI" type="CanvasLayer"]
script = ExtResource("1_2uar2")

[node name="PointsPanel" type="Panel" parent="."]
unique_name_in_owner = true
offset_left = 34.0
offset_top = 20.0
offset_right = 224.0
offset_bottom = 124.0

[node name="HBoxContainer" type="HBoxContainer" parent="PointsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -38.5
offset_right = 47.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxLabels" type="VBoxContainer" parent="PointsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HPLabel" type="Label" parent="PointsPanel/HBoxContainer/VBoxLabels"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 100/100"
horizontal_alignment = 1

[node name="MPLabel" type="Label" parent="PointsPanel/HBoxContainer/VBoxLabels"]
unique_name_in_owner = true
layout_mode = 2
text = "MP: 100/100"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="PointsPanel/HBoxContainer/VBoxLabels"]
unique_name_in_owner = true
layout_mode = 2
text = "Class: Mage"
horizontal_alignment = 1

[node name="AbilitiesPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -77.0
offset_right = 126.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="CenterContainer" type="CenterContainer" parent="AbilitiesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="AbilitiesPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 76
columns = 8

[node name="AbilityPod" parent="AbilitiesPanel/CenterContainer/GridContainer" instance=ExtResource("2_rakiw")]
layout_mode = 2
texture = ExtResource("3_johxo")
hotkey = "X"

[node name="AbilityPod2" parent="AbilitiesPanel/CenterContainer/GridContainer" instance=ExtResource("2_rakiw")]
layout_mode = 2
texture = ExtResource("4_fiupw")
hotkey = "C"

[node name="InventoryPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -225.0
offset_right = 304.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="CenterContainer" type="CenterContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="InventoryPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel/CenterContainer/Grid"]
layout_mode = 2
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 11
alignment = 1

[node name="Button" type="Button" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Go to Title Screen"

[node name="HContainer" type="HBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="HPUpgrade" type="HBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="HPLabels" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/HPUpgrade"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "HP : 1"

[node name="HPUpgradeButton" type="Button" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/HPUpgrade"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "+"

[node name="MPUpgrade" type="HBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MPLabels" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/MPUpgrade"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "MP : 1"

[node name="MPUpgradeButton" type="Button" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/MPUpgrade"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "+"

[node name="ATKUpgrade" type="HBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ATKLabel" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/ATKUpgrade"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ATK: 1"

[node name="ATKUpgradeButton" type="Button" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/ATKUpgrade"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "+"

[node name="SPDUpgrade" type="HBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="SPDLabel" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/SPDUpgrade"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "SPD: 1"

[node name="SPDUpgradeButton" type="Button" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/SPDUpgrade"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "+"

[node name="GridContainer" type="GridContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="LevelLabel" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "LVL: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPLabel" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "EXP: 0/400"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPProgressBar" type="ProgressBar" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SkillPointLabel" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Skill Points: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Items"
horizontal_alignment = 1

[node name="ItemGrid" parent="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer" instance=ExtResource("2_j4a2o")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="DeathOverlay" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DeathOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.5
offset_top = -53.5
offset_right = 164.5
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DeathOverlay/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 78
text = "You died"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="DeathOverlay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "T_T"
horizontal_alignment = 1

[node name="Button" type="Button" parent="DeathOverlay/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "OK"

[connection signal="send_player_inst" from="." to="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/ItemGrid" method="_on_main_gui_send_player_inst"]
[connection signal="pressed" from="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/HPUpgrade/HPUpgradeButton" to="." method="_on_hp_upgrade_button_pressed"]
[connection signal="pressed" from="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/MPUpgrade/MPUpgradeButton" to="." method="_on_mp_upgrade_button_pressed"]
[connection signal="pressed" from="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/ATKUpgrade/ATKUpgradeButton" to="." method="_on_atk_upgrade_button_pressed"]
[connection signal="pressed" from="InventoryPanel/CenterContainer/Grid/HBoxContainer/VBoxContainer/HContainer/VBoxContainer/SPDUpgrade/SPDUpgradeButton" to="." method="_on_spd_upgrade_button_pressed"]
[connection signal="pressed" from="DeathOverlay/VBoxContainer/Button" to="." method="_on_button_pressed"]
